<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adrive_gallery_3p_licenses">Third Party Licenses</string>
    <string name="adrive_gallery_album_add_to_album">Add to Album</string>
    <string name="adrive_gallery_album_add_to_album_dialog_hint">Search albums</string>
    <string name="adrive_gallery_album_add_to_album_dialog_title">Choose Album</string>
    <string name="adrive_gallery_album_add_to_album_progress">Adding selection to album…</string>
    <string name="adrive_gallery_album_added_error">Error occurred trying to add your selection to album</string>
    <string name="adrive_gallery_album_added_multiple_success">Added selection to %1$s</string>
    <string name="adrive_gallery_album_added_success">Your selection has been added</string>
    <string name="adrive_gallery_album_create">Create</string>
    <string name="adrive_gallery_album_create_album">Create New Album</string>
    <string name="adrive_gallery_album_create_album_progress">Creating album…</string>
    <string name="adrive_gallery_album_create_error">Error creating album</string>
    <string name="adrive_gallery_album_create_input_error">Invalid album name</string>
    <string name="adrive_gallery_album_delete_album_confirmation">Delete album %1$s?</string>
    <string name="adrive_gallery_album_delete_album_multiple_confirmation">Delete %1$s albums?</string>
    <string name="adrive_gallery_album_delete_album_multiple_progress">Deleting albums…</string>
    <string name="adrive_gallery_album_delete_album_progress">Deleting album…</string>
    <string name="adrive_gallery_album_delete_from_album_error">Error occurred trying to delete selection from Cloud Drive</string>
    <string name="adrive_gallery_album_deleted_error">Error deleting album(s)</string>
    <string name="adrive_gallery_album_deleted_multiple_success">Albums deleted</string>
    <string name="adrive_gallery_album_deleted_success">Album deleted</string>
    <string name="adrive_gallery_album_info">Info</string>
    <string name="adrive_gallery_album_info_count">Photos and Videos</string>
    <string name="adrive_gallery_album_info_created">Created</string>
    <string name="adrive_gallery_album_info_folder">Folder: %1$s</string>
    <string name="adrive_gallery_album_name">Album name</string>
    <string name="adrive_gallery_album_remove_from_album_dialog_confirm">Remove</string>
    <string name="adrive_gallery_album_remove_from_album_dialog_title">Remove from Album?</string>
    <string name="adrive_gallery_album_remove_from_album_error">Error occurred trying to remove selection from album</string>
    <string name="adrive_gallery_album_remove_from_album_progress">Removing selection from album…</string>
    <string name="adrive_gallery_album_remove_from_album_success">Removed selection from album</string>
    <string name="adrive_gallery_album_set_cover_photo_error">Error occurred trying to set cover photo</string>
    <string name="adrive_gallery_album_set_cover_photo_progress">Setting cover photo…</string>
    <string name="adrive_gallery_album_set_cover_photo_success">Cover photo set</string>
    <string name="adrive_gallery_album_undo_progress">Undoing previous action…</string>
    <string name="adrive_gallery_albums">Albums</string>
    <string name="adrive_gallery_albums_ftue_create">Organize</string>
    <string name="adrive_gallery_albums_ftue_create_desc">Easily make albums of photos and videos</string>
    <string name="adrive_gallery_albums_ftue_create_first">Create your first album</string>
    <string name="adrive_gallery_albums_ftue_letter">Dear Customers,</string>
    <string name="adrive_gallery_albums_ftue_letter1">"Many of you have asked us to make it easier to organize, share, and edit photo albums. We heard you, and we've improved the experience."</string>
    <string name="adrive_gallery_albums_ftue_letter2">We still keep your uploads organized in folders, and it’s easy to convert any folder into a full-fledged photo album. You can edit your albums, create new ones from scratch, and share them with your friends and family. We hope you love these new features.</string>
    <string name="adrive_gallery_albums_ftue_letter3">"Thanks,
The Amazon Photos Team"</string>
    <string name="adrive_gallery_albums_ftue_select">View</string>
    <string name="adrive_gallery_common_action_rename">Rename</string>
    <string name="adrive_gallery_common_actionbar_camera">Camera</string>
    <string name="adrive_gallery_common_actionbar_delete">Delete</string>
    <string name="adrive_gallery_common_actionbar_download">Download</string>
    <string name="adrive_gallery_common_actionbar_print">Print</string>
    <string name="adrive_gallery_common_actionbar_second_screen">Cast</string>
    <string name="adrive_gallery_common_actionbar_slideshow">Slideshow</string>
    <string name="adrive_gallery_common_actionbar_sort">Sort</string>
    <string name="adrive_gallery_common_actionbar_upload">Upload</string>
    <string name="adrive_gallery_common_actionbar_wallpaper">Wallpaper</string>
    <string name="adrive_gallery_common_add_to_favorites">Add to Home</string>
    <string name="adrive_gallery_common_breadcrumb_all_photos">All</string>
    <string name="adrive_gallery_common_breadcrumb_folders">Cloud Drive</string>
    <string name="adrive_gallery_common_breadcrumb_local">Device</string>
    <string name="adrive_gallery_common_breadcrumb_settings">Settings</string>
    <string name="adrive_gallery_common_breadcrumb_videos">Videos</string>
    <string name="adrive_gallery_common_cleanup_manager_select_1gb">Select 1 GB</string>
    <string name="adrive_gallery_common_cleanup_manager_select_2gb">Select 2 GB</string>
    <string name="adrive_gallery_common_cleanup_manager_select_500mb">Select 500 MB</string>
    <string name="adrive_gallery_common_cleanup_manager_select_all">Select all</string>
    <string name="adrive_gallery_common_dialog_share_multi">Share</string>
    <string name="adrive_gallery_common_dialog_share_single">Share</string>
    <string name="adrive_gallery_common_dir_camera">Camera Roll</string>
    <string name="adrive_gallery_common_ftue_add_photos_subheader">Add Photos</string>
    <string name="adrive_gallery_common_ftue_desktop_email_button">E-mail a link to my computer</string>
    <string name="adrive_gallery_common_ftue_mobile_header">Add photos from your Mobile Device</string>
    <string name="adrive_gallery_common_ftue_mobile_hint">Enter your mobile number</string>
    <string name="adrive_gallery_common_ftue_mobile_send_button">Send</string>
    <string name="adrive_gallery_common_ftue_mobile_skip_link">"I don't use these devices"</string>
    <string name="adrive_gallery_common_ftue_mobile_skip_link_accessibility">"I don't use these devices, button"</string>
    <string name="adrive_gallery_common_ftue_mobile_subheader">Get the Cloud Drive iPhone or Android app to view photos you take while on the go.</string>
    <string name="adrive_gallery_common_overflow_menu_edit">Edit</string>
    <string name="adrive_gallery_common_overflow_menu_help">Help</string>
    <string name="adrive_gallery_common_overflow_menu_manage_storage">Manage Storage</string>
    <string name="adrive_gallery_common_overflow_menu_select">Select</string>
    <string name="adrive_gallery_common_photo_info">Info</string>
    <string name="adrive_gallery_common_settings_auto_upload_only_when_charging_summary">Upload only when connected to a charger</string>
    <string name="adrive_gallery_common_settings_auto_upload_only_when_charging_title">Only When Charging</string>
    <string name="adrive_gallery_common_settings_auto_upload_photos_title">Photos</string>
    <string name="adrive_gallery_common_settings_auto_upload_summary">Automatically save and secure your photos and videos to Amazon Cloud Drive. You can save at any other time by tapping the upload button on an image.</string>
    <string name="adrive_gallery_common_settings_auto_upload_title">Auto-Save</string>
    <string name="adrive_gallery_common_settings_auto_upload_videos_summary">Wi-Fi only</string>
    <string name="adrive_gallery_common_settings_auto_upload_videos_title">Videos</string>
    <string name="adrive_gallery_common_settings_folder_settings_summary">Choose to automatically upload folders to your Amazon Cloud Drive</string>
    <string name="adrive_gallery_common_settings_folder_settings_title">Manage Folders</string>
    <string name="adrive_gallery_common_settings_freetime_settings_summary">Choose to automatically upload photos and videos taken by your child to your Amazon Cloud Drive</string>
    <string name="adrive_gallery_common_settings_freetime_settings_title">Manage Amazon %s Photos and Videos</string>
    <string name="adrive_gallery_common_settings_image_rewind">Clean Up Best Shot</string>
    <string name="adrive_gallery_common_settings_manage_storage">Manage Cloud Drive Storage</string>
    <string name="adrive_gallery_common_settings_manage_storage_summary">Manage or make changes to your Cloud Drive storage plan</string>
    <string name="adrive_gallery_common_settings_upload_on_wan_summary">Save your photos to your Amazon Cloud Drive when connected over a mobile network</string>
    <string name="adrive_gallery_common_settings_upload_on_wan_title">Allow Auto-Save on cellular network</string>
    <string name="adrive_gallery_common_this_day_title">This Day</string>
    <string name="adrive_gallery_hide_action">Hide</string>
    <string name="adrive_gallery_image_rewind_action">Select Best Shot</string>
    <string name="adrive_gallery_legal_information">Legal Information</string>
    <string name="adrive_gallery_report_issue_string">Report Issue</string>
    <string name="adrive_gallery_rooted_device_disclaimer_text">Using a rooted device is not advised and may expose your information to other parties.</string>
    <string name="adrive_gallery_send_feedback">Send Feedback</string>
    <string name="adrive_gallery_set_cover_photo_action">Set as Cover Photo</string>
    <string name="adrive_gallery_settings_preference_title">Show hidden photos and videos on this device</string>
    <string name="adrive_gallery_signout">Sign Out</string>
    <string name="adrive_gallery_this_day_preference_summary">"Receive a notification when This Day photos exist for today's date."</string>
    <string name="adrive_gallery_this_day_preference_title">This Day Notifications</string>
    <string name="adrive_gallery_unhide_action">Unhide</string>
    <string name="adrive_gallery_view_hidden_content_action_bar_title">Hidden</string>
    <string name="adrive_gallery_view_hidden_content_settings">Review Hidden Photos &amp; Videos</string>
    <string name="adrive_gallery_view_hidden_options">Show Hidden</string>
</resources>