<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/f_ic_bulk_edit_dark_24dp" android:id="@id/select_mode_action" android:title="@string/adrive_gallery_common_overflow_menu_select" />
    <item android:icon="@drawable/f_ic_camera_dark_24dp" android:id="@id/camera_button" android:title="@string/adrive_gallery_common_actionbar_camera" />
    <item android:icon="@drawable/f_ic_whisperplay_dark_24dp" android:id="@id/whisper_button" android:title="@string/adrive_gallery_common_actionbar_second_screen" />
    <item android:icon="@drawable/f_ic_delete_dark_24dp" android:id="@id/delete_button" android:title="@string/adrive_gallery_common_actionbar_delete" />
    <item android:icon="@drawable/f_ic_edit_dark_24dp" android:id="@id/single_view_menu_edit" android:title="@string/adrive_gallery_common_overflow_menu_edit" />
    <item android:icon="@drawable/f_ic_slideshow_dark_24dp" android:id="@id/slideshow_button" android:title="@string/adrive_gallery_common_actionbar_slideshow" />
    <item android:icon="@drawable/f_ic_image_rewind_dark_24dp" android:id="@id/rewind_chooser_button" android:title="@string/adrive_gallery_image_rewind_action" />
    <item android:icon="@drawable/f_ic_print_dark_24dp" android:id="@id/single_view_menu_print" android:title="@string/adrive_gallery_common_actionbar_print" />
    <item android:icon="@drawable/f_ic_information_dark_24dp" android:id="@id/single_view_menu_info" android:title="@string/adrive_gallery_common_photo_info" />
</menu>