<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/f_ic_share_dark_24dp" android:id="@id/share_button" android:title="@string/adrive_gallery_common_dialog_share_multi" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/f_ic_edit_dark_24dp" android:id="@id/single_view_menu_edit" android:title="@string/adrive_gallery_common_overflow_menu_edit" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/f_ic_delete_dark_24dp" android:id="@id/delete_button" android:title="@string/adrive_gallery_common_actionbar_delete" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/f_ic_information_dark_24dp" android:id="@id/single_view_menu_info" android:title="@string/adrive_gallery_common_photo_info" app:showAsAction="ifRoom" />
</menu>